@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T00:39:14Z",
+  "timestamp" : "2022-05-15T00:48:55Z",
   "count_outdated" : 18,
   "uniques_outdated" : 13,
-  "count" : 27,
-  "uniques" : 21,
+  "count" : 28,
+  "uniques" : 22,
   "clones" : [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 4, 5 ],
       "uniques": 4,
       "uniques_minmax": [ 3, 4 ]
+    },
+    {
+      "timestamp": "2022-05-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
