@@ -1,6 +1,6 @@
 {
-  "count": 9,
-  "uniques": 6,
+  "count": 10,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 5,
       "uniques": 4
+    },
+    {
+      "timestamp": "2022-05-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
