@@ -1,3 +1,10 @@
+2022-05-15T00:48:55Z:
+* notice: last 14d: all unq: 10 7
+* notice: prev accum: outdated-all outdated-unq / all unq: 18 13 / 27 21
+* notice: next accum: outdated-all outdated-unq / all unq: 18 13 / 28 22
+* notice: prev json diff / prev day diff: unq all: +1 +1 -0 -0 / +1 +1 -0 -0
+* notice: changed dates: [2022-05-14]
+
 2022-05-10T00:39:14Z:
 * notice: last 14d: all unq: 9 6
 * notice: prev accum: outdated-all outdated-unq / all unq: 17 12 / 27 21
